# GPvsPFN

./: .gitignore  .pre-commit-config.yml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirementsApril2026.txt
.github/: pull_request_template.md
data/: DNS-ROM.pkl  DNS-ROM_Kian.pkl  DNS_ROM_dataset_50.pkl  data_M.csv  data_gen.py
docs/: LICENSE.MD  gettingstarted.md  index.md  installing.md
example/: Buckling_MF_GP_Example_Grouped_Cat.py  Buckling_MF_GP_Example_Separate_Cat.py  Buckling_MF_GP_Grouped_vs_Separate_Single_seed.ipynb  wing_gp_example_MF.py  wing_gp_example_MF_multi_mean.py
examples/: 1_.py  GIT_GPO_HOIP.py  GP_DNS_ROM2.py  GP_DNS_ROM3.py  GP_DNS_ROM4_MFNoise2.py  GP_M2AX.py  GP_M2AX_best.py  bostonhousing.py  bostonhousing2.py  multifidelity_synthetic_example.py
experiments/: 00_run_all_experiments.py  A10_tabpfn1d_abs_x_GPvsPFN.py  A12_tabpfn1d_0p3sin_6p5pi_x_plus_0p5x_GPvsPFN.py  A14_tabpfn1d_step_GPvsPFN.py  A15_tabpfn1d_x_squared_GPvsPFN.py  A18_tabpfn1d_linear_homoscedastic_GPvsPFN.py  A1_wing_SF_GPvsPFN.py  A20_pumadyn32_GPvsPFN.py  A21_elevators_GPvsPFN.py  A2_buckling_SF_GPvsPFN.py  A4_ackley_GPvsPFN.py  A6_rosenbrock_GPvsPFN.py  A8_griewank_GPvsPFN.py  A9_dixon_price_GPvsPFN.py  B0_run_all_test.py  B1_run_GPvsPFN_run_SF_analytic_noise.py  B2_run_GPvsPFN_1D_analytic.py  B3_run_GPvsPFN_real_datasets.py  defaults.py
experiments_BO/: B1_wing_SF_GPvsPFN.py  B2_buckling_SF_GPvsPFN.py  B3_borehole_SF_GPvsPFN.py  B4_ackley_GPvsPFN.py  B5_rastrigin_GPvsPFN.py  B6_rosenbrock_GPvsPFN.py  B7_zakharov_GPvsPFN.py  (+18 more)
(+817 files in other folders)
