[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpplus"
version = "0.2"
description = "Python library for Generalized Gaussian Process Modeling"
readme = "README.md"                                                     # optional
authors = [{ name = "PMACS Lab", email = "raminb@uci.edu" }]
license = { file = "LICENSE" }                                           # optional
dependencies = ["gpytorch>=1.11"]                                        # Add your dependencies here

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Global settings (e.g., line length, exclude, etc.)
line-length = 120

[tool.ruff.lint]
# Enable flake8/pycodestyle (`E`), Pyflakes (`F`), flake8-bandit (`S`),
# isort (`I`), and performance 'PERF' rules.
select = ["E", "F", "S", "I", "PERF"]
fixable = ["I"]

[tool.ruff.lint.per-file-ignores]
# Enable flake8/pycodestyle (`E`), Pyflakes (`F`), flake8-bandit (`S`),
# isort (`I`), and performance 'PERF' rules.
"__init__.py" = ["F401"]
"docs/*.py" = ["F401"]
# Ignore `S101` (assertions) in all `test` files.
"test/*.py" = ["S101"]
